syntax = "proto3";

package auth;

service AuthService {
  // User authentication
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc SignUp (SignUpRequest) returns (AuthResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc ValidateGoogleUser (ValidateGoogleUserRequest) returns (ValidateGoogleUserResponse);
  rpc ValidateLocalUser (ValidateLocalUserRequest) returns (ValidateLocalUserResponse);
  rpc ValidateJwtUser (ValidateJwtUserRequest) returns (ValidateJwtUserResponse);
  rpc ValidateRefreshToken (ValidateRefreshTokenRequest) returns (ValidateRefreshTokenResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

// Login
message LoginRequest {
  int32 userId = 1;
  string name = 2;
  string role = 4;
}

message AuthResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  string accessToken = 5;
  string refreshToken = 6;
}

// SignUp
message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message SignUpResponse {
  string name = 1;
  string email = 2;
  string password = 3;
}

// Logout
message LogoutRequest {
  int32 userId = 1;
}

message LogoutResponse {
  string message = 1;
}

// ValidateGoogleUser
message ValidateGoogleUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
}

message ValidateGoogleUserResponse {
  string id = 1;
  string name = 2;
  string role = 3;
}

// ValidateLocalUser
message ValidateLocalUserRequest {
  string email = 1;
  string password = 2;
}

message ValidateLocalUserResponse {
  int32 id = 1;
  string name = 2;
  string role = 4;
}

// ValidateJwtUser
message ValidateJwtUserRequest {
  int32 userId = 1;
}

message ValidateJwtUserResponse {
  int32 id = 1;
  string role = 3;
}

// ValidateRefreshToken
message ValidateRefreshTokenRequest {
  int32 userId = 1;
  string refreshToken = 2;
}

message ValidateRefreshTokenResponse {
  int32 id = 1;
}

// RefreshToken
message RefreshTokenRequest {
  int32 userId = 1;
  string name = 2;
}

message RefreshTokenResponse {
  int32 id = 1;
  string name = 2;
  string accessToken = 3;
  string refreshToken = 4;
}


